...
          accessibilityLabel="Toggle filter panel"
          onPress={actions.toggleFilterPanel}
        />
        <Appbar.Action
          icon="plus"
          testID="create-entry-header-button"
          accessibilityLabel="Create entry"
          onPress={handleCreateEntry}
        />
      </Appbar.Header>

      {state.filterPanelOpen && (
        <JournalFilterPanel
...
